# dockrtui

./: Cargo.toml  README.md
src/: app.rs  docker.rs  main.rs  theme.rs
src/ui/: compose.rs  images.rs  logs.rs  mod.rs  networks.rs  pull.rs  splash.rs  stats.rs  volumes.rs
src/ui/containers/: actions.rs  mod.rs  progress.rs  rocket.rs  shell.rs  util.rs  view.rs
