[package]
name = "dockrtui"
version = "0.1.1"
edition = "2024"
authors = ["Julien <denizot.j@orbitnet.fr>"]
license = "MIT"
description = "A fast, modern and keyboard-driven terminal dashboard for Docker — built with Rust."
readme = "README.md"
homepage = "https://orbitnet.fr"
repository = "https://github.com/LuuNa-JD/dockrtui"
keywords = ["docker", "tui", "terminal", "rust", "cli"]
categories = ["command-line-utilities", "development-tools"]
documentation = "https://docs.rs/dockrtui"

[[bin]]
name = "dockrtui"
path = "src/main.rs"

[dependencies]
# UI terminal
ratatui = { version = "0.29.0", default-features = false, features = ["crossterm"] }
crossterm = "0.29.0"
color-eyre = "0.6"

# Async runtime
tokio = { version = "1", features = ["full"] }
smol = "2.0.2"
async-channel = "2.5.0"
futures-lite = "2.6.1"
futures-util = "0.3"

# Docker client
bollard = { version = "0.19.4", features = ["ssl"] }

# Utilities
anyhow = "1"
serde_json = "1"
rand = "0.9.2"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
libc = "0.2"